# nephio-intent-to-o2-demo

./: .gitignore  .yamllint.yml  ADAPTER_STATUS.md  ARCHITECTURE_SIMPLIFIED.md  AUTHORITATIVE_NETWORK_CONFIG.md  AUTHORITATIVE_NETWORK_CONFIG_V3.md  BIDIRECTIONAL_CONNECTIVITY_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMPLETE_ACCESS_GUIDE.md  COMPLETE_SUMMARY.md  COMPLETION_REPORT_EDGE3_EDGE4.md  CONNECTIVITY_STATUS_FINAL.md  DEMO_LLM_ENHANCEMENTS.md  E2E_STATUS_REPORT.md  EDGE1_SERVICE_FIX_REPORT.md  EDGE3_EDGE4_FINAL_STATUS.md  EXECUTIVE_SUMMARY.md  FINAL_DEEP_ANALYSIS.md  FINAL_E2E_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY_WITH_NETWORK_INSIGHTS.md  FINAL_VERIFICATION_REPORT.md  GAP_CLOSURE_SUMMARY.md  HONEST_GAP_ANALYSIS.md  HOW_TO_USE.md  IMMEDIATE_OPENSTACK_ACTIONS.md  IMPLEMENTATION_STATUS_SUMMARY.md  MONITORING_GUIDE.md  Makefile  NETWORK_TOPOLOGY.md  NETWORK_TOPOLOGY_V3.md  OPENSTACK_COMPLETE_GUIDE.md  OPENSTACK_SECURITY_GROUP_RULES_DETAILED.md  OPERATIONS.md  OPERATOR_FIX_REPORT.md  OPTIMIZATION_RECOMMENDATIONS.md  PROJECT_COMPREHENSIVE_UNDERSTANDING.md  PROJECT_DEEP_ANALYSIS_v1.1.1.md  QUICK_START_SSL.md  (+33 more)
adapter/: Dockerfile.automated  OPERATIONS.md  docker-compose.automated.yml  requirements.txt  run_demo.sh  set_automation_env.sh  test_endpoint.py
archive/: README.md
backup_before_vm3_removal_20250926_015227/: ACCESS_GUIDE.md  AUTHORITATIVE_NETWORK_CONFIG.md  COMPLETE_ACCESS_GUIDE.md  GAP_CLOSURE_SUMMARY.md  MONITORING_GUIDE.md  MONITOR_STATUS.sh  Makefile  Makefile.summit  README.md  SUMMIT_DEMO_RUNBOOK.md  SYSTEM_ARCHITECTURE_HLA.md  TEST_MONITOR.sh  TEST_REPORT.md  THREE_VM_INTEGRATION_PLAN.md  TROUBLESHOOTING.md  test-cr-sample3.yaml
config/: config-sync-operator.yaml  edge-sites-config.yaml  rollback.conf  slo-thresholds.yaml
config-examples/: precheck.conf.example
configs/: kind-config-edge2-external.yaml  monitoring-config.yaml
docs/: CI_CD_Pipeline.md  COMPLETION_REPORT_2025-09-26.md  COMPLETION_SUMMARY.md  CONFIG_MANAGEMENT.md  DEMO.md  DEMO_QUICK_REFERENCE.md  DEMO_TALK.md  DEPLOYMENT-GUARD.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ACCELERATION_GUIDE.md  DOCS_CLEANUP_ANALYSIS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_PACKAGE_SUMMARY.md  DOCUMENTATION_VALIDATION_REPORT.md  DOC_UPDATE_STRATEGY.md  DOUBLE_BLIND_CHECKLIST.md  ICC2026_SUBMISSION_TIMELINE.md  IEEE_PAPER_2025.md  IEEE_PAPER_2025_ANONYMOUS.md  IEEE_PAPER_2025_OLD.md  IEEE_PAPER_FIGURES.md  IEEE_PAPER_PROOFREAD.md  IEEE_PAPER_REVIEW.md  IEEE_PAPER_SUPPLEMENTARY.md  IEEE_PAPER_SUPPLEMENTARY_OLD.md  KPI_DASHBOARD.md  KRM_RENDERING_TDD.md  O2IMS.md  OPENSTACK_SECURITY_GROUPS.md  OUTDATED_INFO_REPORT.md  OpenStack-Access-Setup.md  OpenStack-SecurityGroup-Guide.md  P0.4A-OCloud-Provisioning.md  P0.4B-README.md  PATENT_DISCLOSURE_ANALYSIS.md  PHASE_A2_COMPLETION_REPORT.md  PHASE_B_E2E_VERIFICATION.md  PIPELINE.md  PORCH_INTEGRATION_GUIDE.md  (+21 more)
edge-deployment/: deploy-edge01.sh  deploy-edge02.sh  edge-complete-stack.yaml
evidence-package-ieee-icc2026/: README.md  VALIDATION_REPORT.md
flagger/: flagger-install.yaml  intent-canaries.yaml
gitops/: README.md  gitea-external-service.yaml
guardrails/: Makefile  README.md  demo-signed-unsigned.sh  demo-tdd-complete.sh  demo-tdd.sh  integration-test.sh  test-all.sh
infra/: kind-edge2.yaml
k8s/: monitoring-stack.yaml  o2ims-deployment.yaml
krm-engine/: intent-pipeline.yaml  porch-config.yaml
llm-adapter/: CLAUDE_EXECUTION_ANALYSIS.md  DEMO_GUIDE.md  E2E_DEMO_GUIDE.md  FALLBACK_MECHANISM.md  INTEGRATION_SUCCESS.md  Makefile  OPERATIONAL_WORKFLOW.md  README.md  USAGE_GUIDE.md  VM1_INTEGRATION.md  app.py  check_vm1_integration.sh  demo.sh  llm-adapter.service  main.py  monitor_connections.sh  network_config.py  quick_demo.sh  requirements.txt  schema.json  start_service.sh  start_with_claude.sh  test_claude_cli.py  test_integration.sh  test_main.py  trace_claude_calls.py  validate_stability.py  verify_claude_live.py  vm1_integration.py  vm1_integration_example.py
manifests/: focom-operator.yaml
mock-services/: README.md  o2ims-mock-server.py  o2ims-mock-server.service  requirements.txt
monitoring/: alertmanager-config.yml  docker-compose.yml  edge-prometheus-remote-write.yaml  grafana-dashboards.yaml  prometheus-4site.yaml  prometheus-local.yml  prometheus-thanos.yaml  vm1-observability-stack.yaml
o2ims-sdk/: README.md  go.mod  go.sum  provisioning_test.go  test-workflow.sh
operator/: .golangci.yml  CODEOWNERS  CONTRIBUTING.md  Makefile  PROJECT  README.md  SYNC.md  go.mod  go.sum  kind-config.yaml
orchestration/: orchestrate.py
reports/: 2025-best-practices-research.md  4-site-script-updates-summary.md  4-site-support-implementation-report.md  ACC-19-VALIDATION-SUMMARY.md  DEEP_VERIFICATION_REPORT_20250927.md  DEPLOYMENT_FIXES_REPORT_20250927.md  FINAL_METRICS_v1.2.0.md  IEEE_SUBMISSION_PACKAGE_STATUS_20250927.md  O2IMS_TMF921_INTEGRATION_REPORT_20250927.md  PROJECT_DEEP_ANALYSIS_CLEANUP_PLAN.md  README.md  SLO_GATE_IMPLEMENTATION_SUMMARY.md  action-plan-performance-validation.md  claude-md-enhancement-20250927.md  (+59 more)
tools/intent-gateway/: Makefile  README.md  __init__.py  intent-gateway  pyproject.toml  requirements.txt
tools/intent-gateway/intent_gateway/: __init__.py  __main__.py  compliance.py  expectations.py  validator.py
tools/intent-gateway/samples/tmf921/: valid_01.json
tools/intent-gateway/tests/: __init__.py  test_cli.py  test_schema.py  test_tmf921_validation.py
tools/tmf921-to-28312/: .coverage  Makefile  README.md  convert.py  pyproject.toml  requirements.txt
tools/tmf921-to-28312/artifacts/: delta.json  expectation.json  report_skeleton.json
tools/tmf921-to-28312/docs/evidence/: 3gpp-mapping.md
tools/tmf921-to-28312/mappings/: tmf921_to_28312.yaml
tools/tmf921-to-28312/samples/tmf921/: complex_with_unmapped.json
tools/tmf921-to-28312/tests/: test_cli.py  test_convert.py  test_converter.py  test_edge_cases.py  test_integration.py  test_schema_3gpp.py
tools/tmf921-to-28312/tmf921_to_28312/: __init__.py  __main__.py  cli.py  converter.py  schemas.py
(+1203 files in other folders)
